lib/step-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(step, args) {
      		step.args = args
      		return step
      	},
      peg$c1 = function(action, object) {
      		return { action, object }
      	},
      peg$c2 = function(action, object, text) {
      		object.text = text
      		return { action, object }
      	},
      peg$c3 = function(action, object, values) {
      	object.values = values
      	return { action, object }
      },
      peg$c4 = "as",
      peg$c5 = peg$literalExpectation("as", true),
      peg$c6 = function(action, object, destination) {
      		object.destination = destination
      		return { action, object }
      	},
      peg$c7 = peg$literalExpectation("as", false),
      peg$c8 = function(action, object, reference) {
      		object.reference = reference
      		return { action, object }
      	},
      peg$c9 = function(selector, frame, args) {
      		selector.frame = frame
      		selector.args = args
      		return selector
      	},
      peg$c10 = "@",
      peg$c11 = peg$literalExpectation("@", false),
      peg$c12 = function(frame) { return frame },
      peg$c13 = "{",
      peg$c14 = peg$literalExpectation("{", false),
      peg$c15 = "}",
      peg$c16 = peg$literalExpectation("}", false),
      peg$c17 = function(args) { return args },
      peg$c18 = "(",
      peg$c19 = peg$literalExpectation("(", false),
      peg$c20 = ")",
      peg$c21 = peg$literalExpectation(")", false),
      peg$c22 = ",",
      peg$c23 = peg$literalExpectation(",", false),
      peg$c24 = function(head, tail) {
      		return buildList( head, tail, 3 )
      	},
      peg$c25 = ":",
      peg$c26 = peg$literalExpectation(":", false),
      peg$c27 = function(key, value) {
      		return { key: key.name, value: value }
      	},
      peg$c28 = "url",
      peg$c29 = peg$literalExpectation("url", true),
      peg$c30 = "current url",
      peg$c31 = peg$literalExpectation("current url", true),
      peg$c32 = function() { return { type: 'ReserveObject', value: 'url' } },
      peg$c33 = "page",
      peg$c34 = peg$literalExpectation("page", true),
      peg$c35 = function() { return { type: 'ReserveObject', value: 'page' } },
      peg$c36 = "screenshot",
      peg$c37 = peg$literalExpectation("screenshot", true),
      peg$c38 = function() { return { type: 'ReserveObject', value: 'screenshot' } },
      peg$c39 = "text",
      peg$c40 = peg$literalExpectation("text", true),
      peg$c41 = function(preposition) { return { type: 'ReserveObject', value: 'text' } },
      peg$c42 = "cookies",
      peg$c43 = peg$literalExpectation("cookies", true),
      peg$c44 = function() { return { type: 'ReserveObject', value: 'cookies' } },
      peg$c45 = "request",
      peg$c46 = peg$literalExpectation("request", true),
      peg$c47 = function() { return { type: 'ReserveObject', value: 'request' } },
      peg$c48 = "response",
      peg$c49 = peg$literalExpectation("response", true),
      peg$c50 = function() { return { type: 'ReserveObject', value: 'response' } },
      peg$c51 = "go",
      peg$c52 = peg$literalExpectation("go", true),
      peg$c53 = "to",
      peg$c54 = peg$literalExpectation("to", true),
      peg$c55 = function() { return 'goto' },
      peg$c56 = "click",
      peg$c57 = peg$literalExpectation("click", true),
      peg$c58 = function(preposition) { return 'click' },
      peg$c59 = "press",
      peg$c60 = peg$literalExpectation("press", true),
      peg$c61 = function(preposition) { return 'press' },
      peg$c62 = "remember",
      peg$c63 = peg$literalExpectation("remember", true),
      peg$c64 = function() { return 'remember' },
      peg$c65 = "see",
      peg$c66 = peg$literalExpectation("see", true),
      peg$c67 = function() { return 'see' },
      peg$c68 = "save",
      peg$c69 = peg$literalExpectation("save", true),
      peg$c70 = function() { return 'save' },
      peg$c71 = "type",
      peg$c72 = peg$literalExpectation("type", true),
      peg$c73 = function(preposition) { return 'type' },
      peg$c74 = "select",
      peg$c75 = peg$literalExpectation("select", true),
      peg$c76 = function() { return 'select' },
      peg$c77 = "wait",
      peg$c78 = peg$literalExpectation("wait", true),
      peg$c79 = function(preposition) { return 'wait' },
      peg$c80 = "print",
      peg$c81 = peg$literalExpectation("print", true),
      peg$c82 = function() { return 'print' },
      peg$c83 = "into",
      peg$c84 = peg$literalExpectation("into", true),
      peg$c85 = "at",
      peg$c86 = peg$literalExpectation("at", true),
      peg$c87 = "in",
      peg$c88 = peg$literalExpectation("in", true),
      peg$c89 = "on",
      peg$c90 = peg$literalExpectation("on", true),
      peg$c91 = peg$otherExpectation("whitespace"),
      peg$c92 = /^[ \t\n\r]/,
      peg$c93 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c94 = function(head, tail) {
      		head.name += extractList( tail, 'name' ).join( '' )
      		return head
      	},
      peg$c95 = function(head) { return head },
      peg$c96 = ".",
      peg$c97 = peg$literalExpectation(".", false),
      peg$c98 = function(tail) {
      		tail.name = '.' + tail.name
      		return tail
      	},
      peg$c99 = peg$otherExpectation("identifier"),
      peg$c100 = function(head, tail) {
      		return { type: 'Identifier', name: head + tail.join( '' ) }
      	},
      peg$c101 = "_",
      peg$c102 = peg$literalExpectation("_", false),
      peg$c103 = /^[a-z]/i,
      peg$c104 = peg$classExpectation([["a", "z"]], false, true),
      peg$c105 = /^[a-z0-9_]/i,
      peg$c106 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true),
      peg$c107 = function() { return { type: 'Literal', value: true  } },
      peg$c108 = function() { return { type: 'Literal', value: false } },
      peg$c109 = peg$otherExpectation("number"),
      peg$c110 = function(literal) {
      		return literal
      	},
      peg$c111 = function() {
      		return { type: 'Literal', value: parseFloat( text() ) }
      	},
      peg$c112 = "0",
      peg$c113 = peg$literalExpectation("0", false),
      peg$c114 = /^[0-9]/,
      peg$c115 = peg$classExpectation([["0", "9"]], false, false),
      peg$c116 = /^[1-9]/,
      peg$c117 = peg$classExpectation([["1", "9"]], false, false),
      peg$c118 = "e",
      peg$c119 = peg$literalExpectation("e", true),
      peg$c120 = /^[+\-]/,
      peg$c121 = peg$classExpectation(["+", "-"], false, false),
      peg$c122 = "0x",
      peg$c123 = peg$literalExpectation("0x", true),
      peg$c124 = function(digits) {
      		return { type: 'Literal', value: parseInt( digits, 16 ) }
      	},
      peg$c125 = /^[0-9a-f]/i,
      peg$c126 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),
      peg$c127 = peg$otherExpectation("string"),
      peg$c128 = "\"",
      peg$c129 = peg$literalExpectation("\"", false),
      peg$c130 = function(chars) {
      		return { type: 'Literal', value: chars.join( '' ) }
      	},
      peg$c131 = "'",
      peg$c132 = peg$literalExpectation("'", false),
      peg$c133 = "\\",
      peg$c134 = peg$literalExpectation("\\", false),
      peg$c135 = function() { return text() },
      peg$c136 = function(sequence) { return sequence },
      peg$c137 = peg$anyExpectation(),
      peg$c138 = function() { return '' },
      peg$c139 = /^[\n\r\u2028\u2029]/,
      peg$c140 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c141 = peg$otherExpectation("end of line"),
      peg$c142 = "\n",
      peg$c143 = peg$literalExpectation("\n", false),
      peg$c144 = "\r\n",
      peg$c145 = peg$literalExpectation("\r\n", false),
      peg$c146 = "\r",
      peg$c147 = peg$literalExpectation("\r", false),
      peg$c148 = "\u2028",
      peg$c149 = peg$literalExpectation("\u2028", false),
      peg$c150 = "\u2029",
      peg$c151 = peg$literalExpectation("\u2029", false),
      peg$c152 = function() { return "\0" },
      peg$c153 = "b",
      peg$c154 = peg$literalExpectation("b", false),
      peg$c155 = function() { return "\b" },
      peg$c156 = "f",
      peg$c157 = peg$literalExpectation("f", false),
      peg$c158 = function() { return "\f" },
      peg$c159 = "n",
      peg$c160 = peg$literalExpectation("n", false),
      peg$c161 = function() { return "\n" },
      peg$c162 = "r",
      peg$c163 = peg$literalExpectation("r", false),
      peg$c164 = function() { return "\r" },
      peg$c165 = "t",
      peg$c166 = peg$literalExpectation("t", false),
      peg$c167 = function() { return "\t" },
      peg$c168 = "v",
      peg$c169 = peg$literalExpectation("v", false),
      peg$c170 = function() { return "\v" },
      peg$c171 = "x",
      peg$c172 = peg$literalExpectation("x", false),
      peg$c173 = "u",
      peg$c174 = peg$literalExpectation("u", false),
      peg$c175 = function(digits) {
      		return String.fromCharCode( parseInt( digits, 16 ) )
      	},
      peg$c176 = "true",
      peg$c177 = peg$literalExpectation("true", false),
      peg$c178 = "false",
      peg$c179 = peg$literalExpectation("false", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0;

    s0 = peg$parseStep();

    return s0;
  }

  function peg$parseStep() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseStepSee();
    if (s1 === peg$FAILED) {
      s1 = peg$parseStepClick();
      if (s1 === peg$FAILED) {
        s1 = peg$parseStepType();
        if (s1 === peg$FAILED) {
          s1 = peg$parseStepSelect();
          if (s1 === peg$FAILED) {
            s1 = peg$parseStepPress();
            if (s1 === peg$FAILED) {
              s1 = peg$parseStepGoto();
              if (s1 === peg$FAILED) {
                s1 = peg$parseStepSave();
                if (s1 === peg$FAILED) {
                  s1 = peg$parseStepWait();
                  if (s1 === peg$FAILED) {
                    s1 = peg$parseStepRemember();
                    if (s1 === peg$FAILED) {
                      s1 = peg$parseStepPrint();
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseStepArguments();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStepSee() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseActionSee();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSelector();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStepClick() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseActionClick();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSelector();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStepType() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseActionType();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSelector();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWS();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseStringLiteral();
            if (s5 === peg$FAILED) {
              s5 = peg$parseIdentifier();
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c2(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStepSelect() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseActionSelect();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSelector();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWS();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseStringLiteral();
            if (s5 === peg$FAILED) {
              s5 = peg$parseIdentifier();
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c3(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStepPress() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseActionPress();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseStringLiteral();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStepGoto() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseActionGoto();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseStringLiteral();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStepSave() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseActionSave();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseObjectScreenshot();
        if (s3 === peg$FAILED) {
          s3 = peg$parseObjectPage();
          if (s3 === peg$FAILED) {
            s3 = peg$parseObjectCookies();
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWS();
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2).toLowerCase() === peg$c4) {
              s5 = input.substr(peg$currPos, 2);
              peg$currPos += 2;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWS();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseStringLiteral();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c6(s1, s3, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }
